initial_tutorials/sentiment-analyzer/frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: sa-ingress-frontend
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - http:
              paths:
                  - path: /
                    backend:
                        serviceName: sa-frontend
                        servicePort: 80
